Fix: Livechat visibility issue resolved
shouldMarquee 가 true여서 shortmarquee-content 가 적용되었을 떄 Livechat이 보이지 않는 문제 -
0 에서 100 범위를 0 에서 -100 으로 수정

Livechat 메세지가 변경되었을 때 marquee animation 이 초기화 되지 않아서 메세지가 중간부터 보이는 문제 -
key 를 추가하여 메세지가 변경되었을 때 요소를 다시 로드해서 animation 을 처음부터 시작하도록 변경

--- a/src/app/global.css
+++ b/src/app/global.css
@@ -20,11 +20,11 @@
 
 .shortmarquee-content {
     display: inline-block;
-    padding-left: 100%;
+    padding-left: 50%;
     animation: shortmarquee 5s linear infinite;
 }
 
 @keyframes shortmarquee {
     from { transform: translateX(calc(0 - min(25%, 144px))); }
-    to { transform: translateX(calc(100% - min(25%, 144px))); }
+    to { transform: translateX(calc(-100% - min(25%, 144px))); } 
 }
